--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
           "@testing-library/jest-dom": "^5.14.1",
           "@testing-library/react": "^11.2.7",
           "@testing-library/user-event": "^12.8.3",
+          "firebase": "^9.2.0",
           "gh-pages": "^3.2.3",
           "jquery": "^3.6.0",
           "node-sass": "^6.0.1",
